辞書ファイルをjarから展開する仕組みの実装